[package]
name = "abs_mm"
version = "0.1.1"
edition = "2021"

authors = ["lino <lino_snsalias@outlook.com>"]
description = "Abstract Memory Management"
homepage = "https://github.com/ljsnogard/abs_mm"
keywords = ["traits", "smart-pointer"]
categories = ["no-std", "memory-management"]
license = "MIT/Apache-2.0"
readme = "README.md"

[features]
support-std = []
default = []

[dev-dependencies]
log = { version = "0.4.*" }
env_logger = { version = "0.11.*" }
